--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,10 @@
       package="net.insomniasoftware.mycar"
       android:versionCode="1"
       android:versionName="1.0">
+      <uses-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".ui.MainActivity"
-                  android:label="@string/app_name">
+    <uses-library android:name="com.google.android.maps" />
+        <activity android:label="@string/app_name" android:name=".ui.CarsMapActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
