Repository folder moved, prepared to include tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-.classpath
-.project
-.settings/
-bin/
-default.properties
-gen/
+.metadata/
+
+WheresMyCar/.classpath
+WheresMyCar/.project
+WheresMyCar/.settings/
+WheresMyCar/bin/
+WheresMyCar/default.properties
+WheresMyCar/gen/
+
+WheresMyCarTest/.classpath
+WheresMyCarTest/.project
+WheresMyCarTest/.settings/
+WheresMyCarTest/bin/
+WheresMyCarTest/default.properties
+WheresMyCarTest/gen/
+
