--- a/WheresMyCar/AndroidManifest.xml
+++ b/WheresMyCar/AndroidManifest.xml
@@ -3,9 +3,11 @@
       package="net.insomniasoftware.mycar"
       android:versionCode="1"
       android:versionName="1.0">
+	<uses-sdk 
+		android:minSdkVersion="4" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".ui.CarProfilesListActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
