--- a/WheresMyCar/AndroidManifest.xml
+++ b/WheresMyCar/AndroidManifest.xml
@@ -3,8 +3,13 @@
       package="net.insomniasoftware.mycar"
       android:versionCode="1"
       android:versionName="1.0">
-	<uses-sdk 
-		android:minSdkVersion="4" />
+	
+	<uses-sdk android:minSdkVersion="4" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".ui.CarProfilesListActivity"
                   android:label="@string/app_name" >
@@ -12,6 +17,13 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <activity android:name=".ui.EditCarActivity">
+             <intent-filter>
+                <action android:name="android.intent.action.EDIT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>       
         </activity>
 
         <provider
